# openvr-hooks

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FindOpenVR.cmake  vcpkg.json
include/: HookEventConsumer.h  InterfaceHooks.h  TrackedDeviceServerDriverHooks.h  VRControllerComponentHooks.h  VRDriverContextHooks.h  VRDriverInputHooks.h  VRServerDriverHostHooks.h  common.h  logger.h
src/: InterfaceHooks.cpp  TrackedDeviceServerDriverHooks.cpp  VRControllerComponentHooks.cpp  VRDriverContextHooks.cpp  VRDriverInputHooks.cpp  VRServerDriverHostHooks.cpp  common.cpp  logger.cpp
